if (WIN32)
	set( HOME $ENV{USERPROFILE} )
else (WIN32)
	set ( HOME $ENV{HOME} )
endif(WIN32)
SET(QGIS_DATA_DIR ${HOME}/.qgis/)
FILE(GLOB INSTALLER_FILES *.py)
SET(INSTALLER_FILES ${INSTALLER_FILES} ${CMAKE_CURRENT_SOURCE_DIR}/../../wps/client/wps_client.py)

FILE(GLOB UI_FILES *.ui)
PYQT4_WRAP_UI(PYUI_FILES ${UI_FILES})
PYQT4_ADD_RESOURCES(PYRC_FILES resources.qrc)
ADD_CUSTOM_TARGET(ifsttarRouting ALL DEPENDS ${PYUI_FILES} ${PYRC_FILES})

SET(INSTALLER_FILES ${INSTALLER_FILES} ${PYUI_FILES} ${PYRC_FILES})

INSTALL(FILES ${INSTALLER_FILES} DESTINATION ${QGIS_DATA_DIR}/python/plugins/ifsttarrouting)

